# PBVAE

./: README.md  analize.ipynb  main.py  pyproject.toml
config/: mnist_train.yaml  mnist_train_beta.yaml  mnist_train_random.yaml  mnist_train_zero.yaml
pbvae/: trainer.py
